[metadata]
name = adbnx_adapter
author = Anthony Mahanna
author_email = anthony.mahanna@arangodb.com
description = Convert ArangoDB graphs to NetworkX & vice-versa.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/arangoml/networkx-adapter
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities
    Typing :: Typed

[options]
python_requires = >=3.7

[flake8]
max-line-length = 88
extend-ignore = E203, E741, W503
exclude =.git .idea .*_cache dist venv

[mypy]
ignore_missing_imports = True
strict = True
